Add two new angular 1.5 views to jnt:map component. The first one is singleMarker view that can be directly linked on a component with location properties (as the default one) the second one (MultipleMarkers) allows the user to bind the map on a jnt:list component and it will browse all the components with a location in the list and add a marker on the map.  Those views embed angular, lodash, angular-google-maps and logger libraries in the module.

--- a/src/main/resources/resources/JahiaLocation_fr.properties
+++ b/src/main/resources/resources/JahiaLocation_fr.properties
@@ -1,4 +1,4 @@
-jmix_geotagged=Code gÈographique
+jmix_geotagged=Code g√©ographique
 jmix_geotagged.j_latitude=Latitude
 jmix_geotagged.j_longitude=Longitude
 jmix_locationAware=Adresse - Localisation
@@ -19,7 +19,9 @@ jnt_map.j_width=Largeur
 jnt_map.j_mapType=Type de la carte
 jnt_map.j_markerImage=Image du marker
 jnt_map.j_zoom=Zoom
-jnt_map.noPreviewInEditMode=Le rendu de la carte n'est pas disponible en Edit mode. s'il vous plaÓt passer en mode aperÁu pour la voir.
+jnt_map.misbound.list=Veuillez lier cette carte a une liste ou changer sa vue pour afficher un marqueur unique.
+jnt_map.misbound.location=Veuillez lier cette carte a un √©l√©ment avec une adresse unique ou changer sa vue pour une vue liste si besoin.
+jnt_map.noPreviewInEditMode=Le rendu de la carte n'est pas disponible en Edit mode. s'il vous pla√Æt passer en mode aper√ßu pour la voir.
 jnt_staticMap=Carte (statique)
 jnt_staticMap.j_height=Hauteur
 jnt_staticMap.j_width=Largeur
