--- a/src/main/resources/resources/JahiaLocation_de.properties
+++ b/src/main/resources/resources/JahiaLocation_de.properties
@@ -19,6 +19,8 @@ jnt_map.j_mapType=Kartentyp
 jnt_map.j_markerImage=Marker-Bild
 jnt_map.j_width=Breite
 jnt_map.j_zoom=Zoom
+jnt_map.misbound.list=Please bind this map to a list or change its view for a single marker view.
+jnt_map.misbound.location=Please bind this map to a item with location or change its view for a list view if bound on a list element.
 jnt_map.noPreviewInEditMode=Die Karten-Vorschau ist im Bearbeitungsmodus nicht verfügbar. Bitte wechseln Sie zum Vorschau-Modus.
 jnt_staticMap=Karte (statisch)
 jnt_staticMap.j_height=Höhe
