Add new property State

--- a/src/main/resources/resources/JahiaLocation_en.properties
+++ b/src/main/resources/resources/JahiaLocation_en.properties
@@ -3,6 +3,7 @@ jmix_geotagged.j_latitude=Latitude
 jmix_geotagged.j_longitude=Longitude
 jmix_locationAware=Location
 jmix_locationAware.j_country=Country
+jmix_locationAware.j_state=State
 jmix_locationAware.j_geocodeAutomatically=Detect latitude/longitude automatically on save
 jmix_locationAware.j_street=Street
 jmix_locationAware.j_town=Town
