--- a/src/main/resources/resources/JahiaLocation_fr.properties
+++ b/src/main/resources/resources/JahiaLocation_fr.properties
@@ -1,15 +1,16 @@
-jmix_geotagged=Code géographique
+jmix_geotagged=Code g\u00E9ographique
 jmix_geotagged.j_latitude=Latitude
 jmix_geotagged.j_longitude=Longitude
 jmix_locationAware=Adresse - Localisation
 jmix_locationAware.j_country=Pays
-jmix_locationAware.j_geocodeAutomatically=Détecter automatiquement la latitude et la longitude à la sauvegarde
+jmix_locationAware.j_state=Etat
+jmix_locationAware.j_geocodeAutomatically=D\u00E9tecter automatiquement la latitude et la longitude \u00E0 la sauvegarde
 jmix_locationAware.j_street=Rue
 jmix_locationAware.j_town=Ville
 jmix_locationAware.j_zipCode=Code Postal
 jnt_location=Adresse - Localisation
 jnt_location.j_country=Pays
-jnt_location.j_geocodeAutomatically=Détecter automatiquement la latitude et la longitude à la sauvegarde
+jnt_location.j_geocodeAutomatically=D\u00E9tecter automatiquement la latitude et la longitude \u00E0 la sauvegarde
 jnt_location.j_latitude=Latitude
 jnt_location.j_longitude=Longitude
 jnt_location.j_street=Rue
@@ -21,7 +22,7 @@ jnt_map.j_mapType=Type de la carte
 jnt_map.j_markerImage=Image du marker
 jnt_map.j_width=Largeur
 jnt_map.j_zoom=Zoom
-jnt_map.noPreviewInEditMode=Le rendu de la carte n'est pas disponible en Edit mode. s'il vous plaît passer en mode aperçu pour la voir.
+jnt_map.noPreviewInEditMode=Le rendu de la carte n'est pas disponible en Edit mode. s'il vous pla\u00EEt passer en mode aper\u00E7u pour la voir.
 jnt_staticMap=Carte (statique)
 jnt_staticMap.j_height=Hauteur
 jnt_staticMap.j_imageType=Type d'image
